[gd_scene format=4 uid="uid://cepi7l2yq7v70"]

[ext_resource type="TileSet" uid="uid://6nv32bdevd7d" path="res://assets/tilesets/test_tileset/test_tileset.tres" id="1_4icc5"]
[ext_resource type="Texture2D" uid="uid://duy8co0fugbsu" path="res://assets/icon.svg" id="1_iclql"]
[ext_resource type="Script" uid="uid://coaco4ykmwesx" path="res://src/rooms/room_base.gd" id="1_jjl5p"]
[ext_resource type="Script" uid="uid://cxla1cqkag8lu" path="res://src/other_nodes/componets/combat/damage_detection/hitbox_component.gd" id="5_3ttad"]
[ext_resource type="Script" uid="uid://bqoimkovje44w" path="res://resources/combat/effects/base_effect.gd" id="6_nmdk6"]
[ext_resource type="Script" uid="uid://o0bnkbvr6k55" path="res://resources/combat/effects/attack_effects/custom_attack_effects/flat_health_effect.gd" id="7_wx32i"]
[ext_resource type="Script" uid="uid://55qwwlruit51" path="res://resources/combat/effects/attack_effects/custom_attack_effects/knockback_effect.gd" id="8_uv8eo"]
[ext_resource type="Script" uid="uid://bgh34blcwhwjf" path="res://src/other_nodes/room_editor_tools/debug/fps_display.gd" id="8_wx32i"]
[ext_resource type="Script" uid="uid://cx8vpb8103j00" path="res://src/other_nodes/room_editor_tools/gateway/gateway.gd" id="11_7yuiy"]
[ext_resource type="Script" uid="uid://bwbbfuu5x3o8i" path="res://src/other_nodes/room_editor_tools/gateway/resources/gateway_info.gd" id="12_5f1c8"]
[ext_resource type="Script" uid="uid://c1ojn44nvgt21" path="res://src/other_nodes/room_editor_tools/gateway/helper/gateway_exit_marker.gd" id="13_5f1c8"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="13_jjl5p"]
[ext_resource type="Script" uid="uid://dukqn0hyev23g" path="res://src/other_nodes/room_editor_tools/camera_zone/camera_zone.gd" id="14_lxi1k"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="14_vil43"]
[ext_resource type="Script" uid="uid://cobb1ipksi4ot" path="res://src/other_nodes/componets/other/assign_player.gd" id="15_jjl5p"]

[sub_resource type="Resource" id="Resource_jjl5p"]
script = ExtResource("12_5f1c8")
to_path = "uid://dmd6qnsjk4gw4"
exit_pos = Vector2(7680, 0)
facing_left = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5f1c8"]
size = Vector2(256, 1024)

[sub_resource type="Resource" id="Resource_uv8eo"]
script = ExtResource("7_wx32i")

[sub_resource type="Resource" id="Resource_4icc5"]
script = ExtResource("8_uv8eo")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ttad"]
size = Vector2(128, 128)

[sub_resource type="Resource" id="Resource_lxi1k"]
script = ExtResource("14_vil43")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjl5p"]
size = Vector2(3584, 1024)

[sub_resource type="Resource" id="Resource_r5234"]
script = ExtResource("14_vil43")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vil43"]
size = Vector2(10240, 2792)

[node name="TestScene_1" type="Node2D" unique_id=1298933192]
script = ExtResource("1_jjl5p")
metadata/_custom_type_script = "uid://coaco4ykmwesx"

[node name="FPSDisplayLabel" type="Label" parent="." unique_id=1300388526]
top_level = true
offset_left = -945.0
offset_top = -669.0
offset_right = -370.0
offset_bottom = -504.0
theme_override_font_sizes/font_size = 120
text = "FPS: 145.0"
horizontal_alignment = 1
script = ExtResource("8_wx32i")
metadata/_custom_type_script = "uid://bgh34blcwhwjf"

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1860633470]
tile_map_data = PackedByteArray("AADm/wAAAQAAAAAAAADn/wAAAQAAAAAAAADo/wAAAQAAAAAAAADp/wAAAQAAAAAAAADq/wAAAQAAAAAAAADr/wAAAQAAAAAAAADs/wAAAQAAAAAAAADt/wAAAQAAAAAAAADu/wAAAQAAAAAAAADv/wAAAQAAAAAAAADw/wAAAQAAAAAAAADx/wAAAQAAAAAAAADy/wAAAQAAAAAAAADz/wAAAQAAAAAAAAD0/wAAAQAAAAAAAAD1/wAAAQAAAAAAAAD2/wAAAQAAAAAAAAD3/wAAAQAAAAAAAAD4/wAAAQAAAAAAAAD5/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD7/wAAAQAAAAAAAAD8/wAAAQAAAAAAAAD9/wAAAQAAAAAAAAD+/wAAAQAAAAAAAAD//wAAAQAAAAAAAAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAALAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAPAAAAAQAAAAAAAAAQAAAAAQAAAAAAAAARAAAAAQAAAAAAAAASAAAAAQAAAAAAAAATAAAAAQAAAAAAAAAUAAAAAQAAAAAAAAAVAAAAAQAAAAAAAAAWAAAAAQAAAAAAAAAXAAAAAQAAAAAAAAAYAAAAAQAAAAAAAAAZAAAAAQAAAAAAAAAaAAAAAQAAAAAAAAAbAAAAAQAAAAAAAAAcAAAAAQAAAAAAAAAdAAAAAQAAAAAAAAAeAAAAAQAAAAAAAADm//b/AQAAAAAAAADm//f/AQAAAAAAAADm//j/AQAAAAAAAADm//n/AQAAAAAAAADm//r/AQAAAAAAAADm//v/AQAAAAAAAADm//z/AQAAAAAAAADm//3/AQAAAAAAAADm//7/AQAAAAAAAADm////AQAAAAAAAADn//b/AQAAAAAAAADn//f/AQAAAAAAAADn//j/AQAAAAAAAADn//n/AQAAAAAAAADn//r/AQAAAAAAAADn//v/AQAAAAAAAADn//z/AQAAAAAAAADn//3/AQAAAAAAAADn//7/AQAAAAAAAADn////AQAAAAAAAADo//b/AQAAAAAAAADo//f/AQAAAAAAAADo//j/AQAAAAAAAADo//n/AQAAAAAAAADo//r/AQAAAAAAAADo//v/AQAAAAAAAADo//z/AQAAAAAAAADo//3/AQAAAAAAAADo//7/AQAAAAAAAADo////AQAAAAAAAAARAPb/AQAAAAAAAAARAPf/AQAAAAAAAAARAPj/AQAAAAAAAAASAPb/AQAAAAAAAAASAPf/AQAAAAAAAAASAPj/AQAAAAAAAAATAPb/AQAAAAAAAAATAPf/AQAAAAAAAAATAPj/AQAAAAAAAAAUAPb/AQAAAAAAAAAUAPf/AQAAAAAAAAAUAPj/AQAAAAAAAAAVAPb/AQAAAAAAAAAVAPf/AQAAAAAAAAAVAPj/AQAAAAAAAAAWAPb/AQAAAAAAAAAWAPf/AQAAAAAAAAAWAPj/AQAAAAAAAAAXAPb/AQAAAAAAAAAXAPf/AQAAAAAAAAAXAPj/AQAAAAAAAAAYAPb/AQAAAAAAAAAYAPf/AQAAAAAAAAAYAPj/AQAAAAAAAAAZAPb/AQAAAAAAAAAZAPf/AQAAAAAAAAAZAPj/AQAAAAAAAAAaAPb/AQAAAAAAAAAaAPf/AQAAAAAAAAAaAPj/AQAAAAAAAAAbAPb/AQAAAAAAAAAbAPf/AQAAAAAAAAAbAPj/AQAAAAAAAAAcAPb/AQAAAAAAAAAcAPf/AQAAAAAAAAAcAPj/AQAAAAAAAAAdAPb/AQAAAAAAAAAdAPf/AQAAAAAAAAAdAPj/AQAAAAAAAAAeAPb/AQAAAAAAAAAeAPf/AQAAAAAAAAAeAPj/AQAAAAAAAAARAPn/AQAAAAAAAAARAPr/AQAAAAAAAAARAPv/AQAAAAAAAAASAPn/AQAAAAAAAAASAPr/AQAAAAAAAAASAPv/AQAAAAAAAAATAPn/AQAAAAAAAAATAPr/AQAAAAAAAAATAPv/AQAAAAAAAAAUAPn/AQAAAAAAAAAUAPr/AQAAAAAAAAAUAPv/AQAAAAAAAAAVAPn/AQAAAAAAAAAVAPr/AQAAAAAAAAAVAPv/AQAAAAAAAAAWAPn/AQAAAAAAAAAWAPr/AQAAAAAAAAAWAPv/AQAAAAAAAAAXAPn/AQAAAAAAAAAXAPr/AQAAAAAAAAAXAPv/AQAAAAAAAAAYAPn/AQAAAAAAAAAYAPr/AQAAAAAAAAAYAPv/AQAAAAAAAAAZAPn/AQAAAAAAAAAZAPr/AQAAAAAAAAAZAPv/AQAAAAAAAAAaAPn/AQAAAAAAAAAaAPr/AQAAAAAAAAAaAPv/AQAAAAAAAAAbAPn/AQAAAAAAAAAbAPr/AQAAAAAAAAAbAPv/AQAAAAAAAAAcAPn/AQAAAAAAAAAcAPr/AQAAAAAAAAAcAPv/AQAAAAAAAAAdAPn/AQAAAAAAAAAdAPr/AQAAAAAAAAAdAPv/AQAAAAAAAAAeAPn/AQAAAAAAAAAeAPr/AQAAAAAAAAAeAPv/AQAAAAAAAADm/wEAAQAAAAAAAADn/wEAAQAAAAAAAADo/wEAAQAAAAAAAADp/wEAAQAAAAAAAADq/wEAAQAAAAAAAADr/wEAAQAAAAAAAADs/wEAAQAAAAAAAADt/wEAAQAAAAAAAADu/wEAAQAAAAAAAADv/wEAAQAAAAAAAADw/wEAAQAAAAAAAADx/wEAAQAAAAAAAADy/wEAAQAAAAAAAADz/wEAAQAAAAAAAAD0/wEAAQAAAAAAAAD1/wEAAQAAAAAAAAD2/wEAAQAAAAAAAAD3/wEAAQAAAAAAAAD4/wEAAQAAAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD8/wEAAQAAAAAAAAD9/wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD//wEAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAADAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAAKAAEAAQAAAAAAAAALAAEAAQAAAAAAAAAMAAEAAQAAAAAAAAANAAEAAQAAAAAAAAAOAAEAAQAAAAAAAAAPAAEAAQAAAAAAAAAQAAEAAQAAAAAAAAARAAEAAQAAAAAAAAASAAEAAQAAAAAAAAATAAEAAQAAAAAAAAAUAAEAAQAAAAAAAAAVAAEAAQAAAAAAAAAWAAEAAQAAAAAAAAAXAAEAAQAAAAAAAAAYAAEAAQAAAAAAAAAZAAEAAQAAAAAAAAAaAAEAAQAAAAAAAAAbAAEAAQAAAAAAAAAcAAEAAQAAAAAAAAAdAAEAAQAAAAAAAAAeAAEAAQAAAAAAAADh//b/AQAAAAAAAADh//f/AQAAAAAAAADh//j/AQAAAAAAAADh//n/AQAAAAAAAADh//r/AQAAAAAAAADh//v/AQAAAAAAAADh//z/AQAAAAAAAADh//3/AQAAAAAAAADh//7/AQAAAAAAAADh////AQAAAAAAAADh/wAAAQAAAAAAAADh/wEAAQAAAAAAAADi//b/AQAAAAAAAADi//f/AQAAAAAAAADi//j/AQAAAAAAAADi//n/AQAAAAAAAADi//r/AQAAAAAAAADi//v/AQAAAAAAAADi//z/AQAAAAAAAADi//3/AQAAAAAAAADi//7/AQAAAAAAAADi////AQAAAAAAAADi/wAAAQAAAAAAAADi/wEAAQAAAAAAAADj//b/AQAAAAAAAADj//f/AQAAAAAAAADj//j/AQAAAAAAAADj//n/AQAAAAAAAADj//r/AQAAAAAAAADj//v/AQAAAAAAAADj//z/AQAAAAAAAADj//3/AQAAAAAAAADj//7/AQAAAAAAAADj////AQAAAAAAAADj/wAAAQAAAAAAAADj/wEAAQAAAAAAAADk//b/AQAAAAAAAADk//f/AQAAAAAAAADk//j/AQAAAAAAAADk//n/AQAAAAAAAADk//r/AQAAAAAAAADk//v/AQAAAAAAAADk//z/AQAAAAAAAADk//3/AQAAAAAAAADk//7/AQAAAAAAAADk////AQAAAAAAAADk/wAAAQAAAAAAAADk/wEAAQAAAAAAAADl//b/AQAAAAAAAADl//f/AQAAAAAAAADl//j/AQAAAAAAAADl//n/AQAAAAAAAADl//r/AQAAAAAAAADl//v/AQAAAAAAAADl//z/AQAAAAAAAADl//3/AQAAAAAAAADl//7/AQAAAAAAAADl////AQAAAAAAAADl/wAAAQAAAAAAAADl/wEAAQAAAAAAAADh/+v/AQAAAAAAAADh/+z/AQAAAAAAAADh/+3/AQAAAAAAAADh/+7/AQAAAAAAAADh/+//AQAAAAAAAADh//D/AQAAAAAAAADh//H/AQAAAAAAAADh//L/AQAAAAAAAADh//P/AQAAAAAAAADh//T/AQAAAAAAAADh//X/AQAAAAAAAADi/+v/AQAAAAAAAADi/+z/AQAAAAAAAADi/+3/AQAAAAAAAADi/+7/AQAAAAAAAADi/+//AQAAAAAAAADi//D/AQAAAAAAAADi//H/AQAAAAAAAADi//L/AQAAAAAAAADi//P/AQAAAAAAAADi//T/AQAAAAAAAADi//X/AQAAAAAAAADj/+v/AQAAAAAAAADj/+z/AQAAAAAAAADj/+3/AQAAAAAAAADj/+7/AQAAAAAAAADj/+//AQAAAAAAAADj//D/AQAAAAAAAADj//H/AQAAAAAAAADj//L/AQAAAAAAAADj//P/AQAAAAAAAADj//T/AQAAAAAAAADj//X/AQAAAAAAAADk/+v/AQAAAAAAAADk/+z/AQAAAAAAAADk/+3/AQAAAAAAAADk/+7/AQAAAAAAAADk/+//AQAAAAAAAADk//D/AQAAAAAAAADk//H/AQAAAAAAAADk//L/AQAAAAAAAADk//P/AQAAAAAAAADk//T/AQAAAAAAAADk//X/AQAAAAAAAADl/+v/AQAAAAAAAADl/+z/AQAAAAAAAADl/+3/AQAAAAAAAADl/+7/AQAAAAAAAADl/+//AQAAAAAAAADl//D/AQAAAAAAAADl//H/AQAAAAAAAADl//L/AQAAAAAAAADl//P/AQAAAAAAAADl//T/AQAAAAAAAADl//X/AQAAAAAAAADm/+v/AQAAAAAAAADm/+z/AQAAAAAAAADm/+3/AQAAAAAAAADm/+7/AQAAAAAAAADm/+//AQAAAAAAAADm//D/AQAAAAAAAADm//H/AQAAAAAAAADm//L/AQAAAAAAAADm//P/AQAAAAAAAADm//T/AQAAAAAAAADm//X/AQAAAAAAAADn/+v/AQAAAAAAAADn/+z/AQAAAAAAAADn/+3/AQAAAAAAAADn/+7/AQAAAAAAAADn/+//AQAAAAAAAADn//D/AQAAAAAAAADn//H/AQAAAAAAAADn//L/AQAAAAAAAADn//P/AQAAAAAAAADn//T/AQAAAAAAAADn//X/AQAAAAAAAADo/+v/AQAAAAAAAADo/+z/AQAAAAAAAADo/+3/AQAAAAAAAADo/+7/AQAAAAAAAADo/+//AQAAAAAAAADo//D/AQAAAAAAAADo//H/AQAAAAAAAADo//L/AQAAAAAAAADo//P/AQAAAAAAAADo//X/AQAAAAAAAADp/+v/AQAAAAAAAADp/+z/AQAAAAAAAADp/+3/AQAAAAAAAADp/+7/AQAAAAAAAADp/+//AQAAAAAAAADp//D/AQAAAAAAAADp//H/AQAAAAAAAADp//L/AQAAAAAAAADp//P/AQAAAAAAAADp//T/AQAAAAAAAADq/+v/AQAAAAAAAADq/+z/AQAAAAAAAADq/+3/AQAAAAAAAADq/+7/AQAAAAAAAADq/+//AQAAAAAAAADq//D/AQAAAAAAAADq//H/AQAAAAAAAADq//L/AQAAAAAAAADq//P/AQAAAAAAAADq//T/AQAAAAAAAADr/+v/AQAAAAAAAADr/+z/AQAAAAAAAADr/+3/AQAAAAAAAADr/+7/AQAAAAAAAADr/+//AQAAAAAAAADr//D/AQAAAAAAAADr//H/AQAAAAAAAADr//L/AQAAAAAAAADr//P/AQAAAAAAAADr//T/AQAAAAAAAADs/+v/AQAAAAAAAADs/+z/AQAAAAAAAADs/+3/AQAAAAAAAADs/+7/AQAAAAAAAADs/+//AQAAAAAAAADs//D/AQAAAAAAAADs//H/AQAAAAAAAADs//L/AQAAAAAAAADs//P/AQAAAAAAAADs//T/AQAAAAAAAADt/+v/AQAAAAAAAADt/+z/AQAAAAAAAADt/+3/AQAAAAAAAADt/+7/AQAAAAAAAADt/+//AQAAAAAAAADt//D/AQAAAAAAAADt//H/AQAAAAAAAADt//L/AQAAAAAAAADt//P/AQAAAAAAAADt//T/AQAAAAAAAADu/+v/AQAAAAAAAADu/+z/AQAAAAAAAADu/+3/AQAAAAAAAADu/+7/AQAAAAAAAADu/+//AQAAAAAAAADu//D/AQAAAAAAAADu//H/AQAAAAAAAADu//L/AQAAAAAAAADu//P/AQAAAAAAAADu//T/AQAAAAAAAADv/+v/AQAAAAAAAADv/+z/AQAAAAAAAADv/+3/AQAAAAAAAADv/+7/AQAAAAAAAADv/+//AQAAAAAAAADv//D/AQAAAAAAAADv//H/AQAAAAAAAADv//L/AQAAAAAAAADv//P/AQAAAAAAAADv//T/AQAAAAAAAADw/+v/AQAAAAAAAADw/+z/AQAAAAAAAADw/+3/AQAAAAAAAADw/+7/AQAAAAAAAADw/+//AQAAAAAAAADw//D/AQAAAAAAAADw//H/AQAAAAAAAADw//L/AQAAAAAAAADw//P/AQAAAAAAAADw//T/AQAAAAAAAADx/+v/AQAAAAAAAADx/+z/AQAAAAAAAADx/+3/AQAAAAAAAADx/+7/AQAAAAAAAADx/+//AQAAAAAAAADx//D/AQAAAAAAAADx//H/AQAAAAAAAADx//L/AQAAAAAAAADx//P/AQAAAAAAAADx//T/AQAAAAAAAADy/+v/AQAAAAAAAADy/+z/AQAAAAAAAADy/+3/AQAAAAAAAADy/+7/AQAAAAAAAADy/+//AQAAAAAAAADy//D/AQAAAAAAAADy//H/AQAAAAAAAADy//L/AQAAAAAAAADy//P/AQAAAAAAAADy//T/AQAAAAAAAADz/+v/AQAAAAAAAADz/+z/AQAAAAAAAADz/+3/AQAAAAAAAADz/+7/AQAAAAAAAADz/+//AQAAAAAAAADz//D/AQAAAAAAAADz//H/AQAAAAAAAADz//L/AQAAAAAAAADz//P/AQAAAAAAAADz//T/AQAAAAAAAAD0/+v/AQAAAAAAAAD0/+z/AQAAAAAAAAD0/+3/AQAAAAAAAAD0/+7/AQAAAAAAAAD0/+//AQAAAAAAAAD0//D/AQAAAAAAAAD0//H/AQAAAAAAAAD0//L/AQAAAAAAAAD0//P/AQAAAAAAAAD0//T/AQAAAAAAAAD1/+v/AQAAAAAAAAD1/+z/AQAAAAAAAAD1/+3/AQAAAAAAAAD1/+7/AQAAAAAAAAD1/+//AQAAAAAAAAD1//D/AQAAAAAAAAD1//H/AQAAAAAAAAD1//L/AQAAAAAAAAD1//P/AQAAAAAAAAD1//T/AQAAAAAAAAD2/+v/AQAAAAAAAAD2/+z/AQAAAAAAAAD2/+3/AQAAAAAAAAD2/+7/AQAAAAAAAAD2/+//AQAAAAAAAAD2//D/AQAAAAAAAAD2//H/AQAAAAAAAAD2//L/AQAAAAAAAAD2//P/AQAAAAAAAAD2//T/AQAAAAAAAAD3/+v/AQAAAAAAAAD3/+z/AQAAAAAAAAD3/+3/AQAAAAAAAAD3/+7/AQAAAAAAAAD3/+//AQAAAAAAAAD3//D/AQAAAAAAAAD3//H/AQAAAAAAAAD3//L/AQAAAAAAAAD3//P/AQAAAAAAAAD3//T/AQAAAAAAAAD4/+v/AQAAAAAAAAD4/+z/AQAAAAAAAAD4/+3/AQAAAAAAAAD4/+7/AQAAAAAAAAD4/+//AQAAAAAAAAD4//D/AQAAAAAAAAD4//H/AQAAAAAAAAD4//L/AQAAAAAAAAD4//P/AQAAAAAAAAD4//T/AQAAAAAAAAD5/+v/AQAAAAAAAAD5/+z/AQAAAAAAAAD5/+3/AQAAAAAAAAD5/+7/AQAAAAAAAAD5/+//AQAAAAAAAAD5//D/AQAAAAAAAAD5//H/AQAAAAAAAAD5//L/AQAAAAAAAAD5//P/AQAAAAAAAAD5//T/AQAAAAAAAAD6/+v/AQAAAAAAAAD6/+z/AQAAAAAAAAD6/+3/AQAAAAAAAAD6/+7/AQAAAAAAAAD6/+//AQAAAAAAAAD6//D/AQAAAAAAAAD6//H/AQAAAAAAAAD6//L/AQAAAAAAAAD6//P/AQAAAAAAAAD6//T/AQAAAAAAAAD7/+v/AQAAAAAAAAD7/+z/AQAAAAAAAAD7/+3/AQAAAAAAAAD7/+7/AQAAAAAAAAD7/+//AQAAAAAAAAD7//D/AQAAAAAAAAD7//H/AQAAAAAAAAD7//L/AQAAAAAAAAD7//P/AQAAAAAAAAD7//T/AQAAAAAAAAD8/+v/AQAAAAAAAAD8/+z/AQAAAAAAAAD8/+3/AQAAAAAAAAD8/+7/AQAAAAAAAAD8/+//AQAAAAAAAAD8//D/AQAAAAAAAAD8//H/AQAAAAAAAAD8//L/AQAAAAAAAAD8//P/AQAAAAAAAAD8//T/AQAAAAAAAAD9/+v/AQAAAAAAAAD9/+z/AQAAAAAAAAD9/+3/AQAAAAAAAAD9/+7/AQAAAAAAAAD9/+//AQAAAAAAAAD9//D/AQAAAAAAAAD9//H/AQAAAAAAAAD9//L/AQAAAAAAAAD9//P/AQAAAAAAAAD9//T/AQAAAAAAAAD+/+v/AQAAAAAAAAD+/+z/AQAAAAAAAAD+/+3/AQAAAAAAAAD+/+7/AQAAAAAAAAD+/+//AQAAAAAAAAD+//D/AQAAAAAAAAD+//H/AQAAAAAAAAD+//L/AQAAAAAAAAD+//P/AQAAAAAAAAD+//T/AQAAAAAAAAD//+v/AQAAAAAAAAD//+z/AQAAAAAAAAD//+3/AQAAAAAAAAD//+7/AQAAAAAAAAD//+//AQAAAAAAAAD///D/AQAAAAAAAAD///H/AQAAAAAAAAD///L/AQAAAAAAAAD///P/AQAAAAAAAAD///T/AQAAAAAAAAAAAOv/AQAAAAAAAAAAAOz/AQAAAAAAAAAAAO3/AQAAAAAAAAAAAO7/AQAAAAAAAAAAAO//AQAAAAAAAAAAAPD/AQAAAAAAAAAAAPH/AQAAAAAAAAAAAPL/AQAAAAAAAAAAAPP/AQAAAAAAAAAAAPT/AQAAAAAAAAABAOv/AQAAAAAAAAABAOz/AQAAAAAAAAABAO3/AQAAAAAAAAABAO7/AQAAAAAAAAABAO//AQAAAAAAAAABAPD/AQAAAAAAAAABAPH/AQAAAAAAAAABAPL/AQAAAAAAAAABAPP/AQAAAAAAAAABAPT/AQAAAAAAAAACAOv/AQAAAAAAAAACAOz/AQAAAAAAAAACAO3/AQAAAAAAAAACAO7/AQAAAAAAAAACAO//AQAAAAAAAAACAPD/AQAAAAAAAAACAPH/AQAAAAAAAAACAPL/AQAAAAAAAAACAPP/AQAAAAAAAAACAPT/AQAAAAAAAAADAOv/AQAAAAAAAAADAOz/AQAAAAAAAAADAO3/AQAAAAAAAAADAO7/AQAAAAAAAAADAO//AQAAAAAAAAADAPD/AQAAAAAAAAADAPH/AQAAAAAAAAADAPL/AQAAAAAAAAADAPP/AQAAAAAAAAADAPT/AQAAAAAAAAAEAOv/AQAAAAAAAAAEAOz/AQAAAAAAAAAEAO3/AQAAAAAAAAAEAO7/AQAAAAAAAAAEAO//AQAAAAAAAAAEAPD/AQAAAAAAAAAEAPH/AQAAAAAAAAAEAPL/AQAAAAAAAAAEAPP/AQAAAAAAAAAEAPT/AQAAAAAAAAAFAOv/AQAAAAAAAAAFAOz/AQAAAAAAAAAFAO3/AQAAAAAAAAAFAO7/AQAAAAAAAAAFAO//AQAAAAAAAAAFAPD/AQAAAAAAAAAFAPH/AQAAAAAAAAAFAPL/AQAAAAAAAAAFAPP/AQAAAAAAAAAFAPT/AQAAAAAAAAAGAOv/AQAAAAAAAAAGAOz/AQAAAAAAAAAGAO3/AQAAAAAAAAAGAO7/AQAAAAAAAAAGAO//AQAAAAAAAAAGAPD/AQAAAAAAAAAGAPH/AQAAAAAAAAAGAPL/AQAAAAAAAAAGAPP/AQAAAAAAAAAGAPT/AQAAAAAAAAAHAOv/AQAAAAAAAAAHAOz/AQAAAAAAAAAHAO3/AQAAAAAAAAAHAO7/AQAAAAAAAAAHAO//AQAAAAAAAAAHAPD/AQAAAAAAAAAHAPH/AQAAAAAAAAAHAPL/AQAAAAAAAAAHAPP/AQAAAAAAAAAHAPT/AQAAAAAAAAAIAOv/AQAAAAAAAAAIAOz/AQAAAAAAAAAIAO3/AQAAAAAAAAAIAO7/AQAAAAAAAAAIAO//AQAAAAAAAAAIAPD/AQAAAAAAAAAIAPH/AQAAAAAAAAAIAPL/AQAAAAAAAAAIAPP/AQAAAAAAAAAIAPT/AQAAAAAAAAAJAOv/AQAAAAAAAAAJAOz/AQAAAAAAAAAJAO3/AQAAAAAAAAAJAO7/AQAAAAAAAAAJAO//AQAAAAAAAAAJAPD/AQAAAAAAAAAJAPH/AQAAAAAAAAAJAPL/AQAAAAAAAAAJAPP/AQAAAAAAAAAJAPT/AQAAAAAAAAAKAOv/AQAAAAAAAAAKAOz/AQAAAAAAAAAKAO3/AQAAAAAAAAAKAO7/AQAAAAAAAAAKAO//AQAAAAAAAAAKAPD/AQAAAAAAAAAKAPH/AQAAAAAAAAAKAPL/AQAAAAAAAAAKAPP/AQAAAAAAAAAKAPT/AQAAAAAAAAALAOv/AQAAAAAAAAALAOz/AQAAAAAAAAALAO3/AQAAAAAAAAALAO7/AQAAAAAAAAALAO//AQAAAAAAAAALAPD/AQAAAAAAAAALAPH/AQAAAAAAAAALAPL/AQAAAAAAAAALAPP/AQAAAAAAAAALAPT/AQAAAAAAAAAMAOv/AQAAAAAAAAAMAOz/AQAAAAAAAAAMAO3/AQAAAAAAAAAMAO7/AQAAAAAAAAAMAO//AQAAAAAAAAAMAPD/AQAAAAAAAAAMAPH/AQAAAAAAAAAMAPL/AQAAAAAAAAAMAPP/AQAAAAAAAAAMAPT/AQAAAAAAAAANAOv/AQAAAAAAAAANAOz/AQAAAAAAAAANAO3/AQAAAAAAAAANAO7/AQAAAAAAAAANAO//AQAAAAAAAAANAPD/AQAAAAAAAAANAPH/AQAAAAAAAAANAPL/AQAAAAAAAAANAPP/AQAAAAAAAAANAPT/AQAAAAAAAAAOAOv/AQAAAAAAAAAOAOz/AQAAAAAAAAAOAO3/AQAAAAAAAAAOAO7/AQAAAAAAAAAOAO//AQAAAAAAAAAOAPD/AQAAAAAAAAAOAPH/AQAAAAAAAAAOAPL/AQAAAAAAAAAOAPP/AQAAAAAAAAAOAPT/AQAAAAAAAAAPAOv/AQAAAAAAAAAPAOz/AQAAAAAAAAAPAO3/AQAAAAAAAAAPAO7/AQAAAAAAAAAPAO//AQAAAAAAAAAPAPD/AQAAAAAAAAAPAPH/AQAAAAAAAAAPAPL/AQAAAAAAAAAPAPP/AQAAAAAAAAAPAPT/AQAAAAAAAAAQAOv/AQAAAAAAAAAQAOz/AQAAAAAAAAAQAO3/AQAAAAAAAAAQAO7/AQAAAAAAAAAQAO//AQAAAAAAAAAQAPD/AQAAAAAAAAAQAPH/AQAAAAAAAAAQAPL/AQAAAAAAAAAQAPP/AQAAAAAAAAAQAPT/AQAAAAAAAAARAOv/AQAAAAAAAAARAOz/AQAAAAAAAAARAO3/AQAAAAAAAAARAO7/AQAAAAAAAAARAO//AQAAAAAAAAARAPD/AQAAAAAAAAARAPH/AQAAAAAAAAARAPL/AQAAAAAAAAARAPP/AQAAAAAAAAARAPT/AQAAAAAAAAARAPX/AQAAAAAAAAASAOv/AQAAAAAAAAASAOz/AQAAAAAAAAASAO3/AQAAAAAAAAASAO7/AQAAAAAAAAASAO//AQAAAAAAAAASAPD/AQAAAAAAAAASAPH/AQAAAAAAAAASAPL/AQAAAAAAAAASAPP/AQAAAAAAAAASAPT/AQAAAAAAAAASAPX/AQAAAAAAAAATAOv/AQAAAAAAAAATAOz/AQAAAAAAAAATAO3/AQAAAAAAAAATAO7/AQAAAAAAAAATAO//AQAAAAAAAAATAPD/AQAAAAAAAAATAPH/AQAAAAAAAAATAPL/AQAAAAAAAAATAPP/AQAAAAAAAAATAPT/AQAAAAAAAAATAPX/AQAAAAAAAAAUAOv/AQAAAAAAAAAUAOz/AQAAAAAAAAAUAO3/AQAAAAAAAAAUAO7/AQAAAAAAAAAUAO//AQAAAAAAAAAUAPD/AQAAAAAAAAAUAPH/AQAAAAAAAAAUAPL/AQAAAAAAAAAUAPP/AQAAAAAAAAAUAPT/AQAAAAAAAAAUAPX/AQAAAAAAAAAVAOv/AQAAAAAAAAAVAOz/AQAAAAAAAAAVAO3/AQAAAAAAAAAVAO7/AQAAAAAAAAAVAO//AQAAAAAAAAAVAPD/AQAAAAAAAAAVAPH/AQAAAAAAAAAVAPL/AQAAAAAAAAAVAPP/AQAAAAAAAAAVAPT/AQAAAAAAAAAVAPX/AQAAAAAAAAAWAOv/AQAAAAAAAAAWAOz/AQAAAAAAAAAWAO3/AQAAAAAAAAAWAO7/AQAAAAAAAAAWAO//AQAAAAAAAAAWAPD/AQAAAAAAAAAWAPH/AQAAAAAAAAAWAPL/AQAAAAAAAAAWAPP/AQAAAAAAAAAWAPT/AQAAAAAAAAAWAPX/AQAAAAAAAAAXAOv/AQAAAAAAAAAXAOz/AQAAAAAAAAAXAO3/AQAAAAAAAAAXAO7/AQAAAAAAAAAXAO//AQAAAAAAAAAXAPD/AQAAAAAAAAAXAPH/AQAAAAAAAAAXAPL/AQAAAAAAAAAXAPP/AQAAAAAAAAAXAPT/AQAAAAAAAAAXAPX/AQAAAAAAAAAYAOv/AQAAAAAAAAAYAOz/AQAAAAAAAAAYAO3/AQAAAAAAAAAYAO7/AQAAAAAAAAAYAO//AQAAAAAAAAAYAPD/AQAAAAAAAAAYAPH/AQAAAAAAAAAYAPL/AQAAAAAAAAAYAPP/AQAAAAAAAAAYAPT/AQAAAAAAAAAYAPX/AQAAAAAAAAAZAOv/AQAAAAAAAAAZAOz/AQAAAAAAAAAZAO3/AQAAAAAAAAAZAO7/AQAAAAAAAAAZAO//AQAAAAAAAAAZAPD/AQAAAAAAAAAZAPH/AQAAAAAAAAAZAPL/AQAAAAAAAAAZAPP/AQAAAAAAAAAZAPT/AQAAAAAAAAAZAPX/AQAAAAAAAAAaAOv/AQAAAAAAAAAaAOz/AQAAAAAAAAAaAO3/AQAAAAAAAAAaAO7/AQAAAAAAAAAaAO//AQAAAAAAAAAaAPD/AQAAAAAAAAAaAPH/AQAAAAAAAAAaAPL/AQAAAAAAAAAaAPP/AQAAAAAAAAAaAPT/AQAAAAAAAAAaAPX/AQAAAAAAAAAbAOv/AQAAAAAAAAAbAOz/AQAAAAAAAAAbAO3/AQAAAAAAAAAbAO7/AQAAAAAAAAAbAO//AQAAAAAAAAAbAPD/AQAAAAAAAAAbAPH/AQAAAAAAAAAbAPL/AQAAAAAAAAAbAPP/AQAAAAAAAAAbAPT/AQAAAAAAAAAbAPX/AQAAAAAAAAAcAOv/AQAAAAAAAAAcAOz/AQAAAAAAAAAcAO3/AQAAAAAAAAAcAO7/AQAAAAAAAAAcAO//AQAAAAAAAAAcAPD/AQAAAAAAAAAcAPH/AQAAAAAAAAAcAPL/AQAAAAAAAAAcAPP/AQAAAAAAAAAcAPT/AQAAAAAAAAAcAPX/AQAAAAAAAAAdAOv/AQAAAAAAAAAdAOz/AQAAAAAAAAAdAO3/AQAAAAAAAAAdAO7/AQAAAAAAAAAdAO//AQAAAAAAAAAdAPD/AQAAAAAAAAAdAPH/AQAAAAAAAAAdAPL/AQAAAAAAAAAdAPP/AQAAAAAAAAAdAPT/AQAAAAAAAAAdAPX/AQAAAAAAAAAeAOv/AQAAAAAAAAAeAOz/AQAAAAAAAAAeAO3/AQAAAAAAAAAeAO7/AQAAAAAAAAAeAO//AQAAAAAAAAAeAPD/AQAAAAAAAAAeAPH/AQAAAAAAAAAeAPL/AQAAAAAAAAAeAPP/AQAAAAAAAAAeAPT/AQAAAAAAAAAeAPX/AQAAAAAAAADo//T/AQAAAAAAAAA=")
tile_set = ExtResource("1_4icc5")

[node name="Gateway" type="Area2D" parent="." unique_id=715800063]
position = Vector2(7936, 0)
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("11_7yuiy")
gateway_info = SubResource("Resource_jjl5p")
metadata/_custom_type_script = "uid://cx8vpb8103j00"

[node name="GatewayCollider" type="CollisionShape2D" parent="Gateway" unique_id=1342226251]
position = Vector2(128, -504)
shape = SubResource("RectangleShape2D_5f1c8")

[node name="GatewayExit" type="Marker2D" parent="Gateway" unique_id=1216309015]
position = Vector2(-256, 0)
script = ExtResource("13_5f1c8")
facing_left = true

[node name="DamageTester" type="Area2D" parent="." unique_id=1654942989]
position = Vector2(-2112, -472)
collision_layer = 8
collision_mask = 0
monitoring = false
script = ExtResource("5_3ttad")
effects = Array[ExtResource("6_nmdk6")]([SubResource("Resource_uv8eo"), SubResource("Resource_4icc5")])
shape = SubResource("RectangleShape2D_3ttad")
faction = 2
metadata/_custom_type_script = "uid://cxla1cqkag8lu"

[node name="Icon" type="Sprite2D" parent="DamageTester" unique_id=1672272971]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("1_iclql")

[node name="Zone1" type="Area2D" parent="." unique_id=893557619]
visible = false
position = Vector2(6135, -1393)
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("14_lxi1k")
metadata/_custom_type_script = "uid://dukqn0hyev23g"

[node name="PhantomCamera2D" type="Node2D" parent="Zone1" unique_id=1797415954]
position = Vector2(-247, 369)
script = ExtResource("13_jjl5p")
zoom = Vector2(0.3, 0.3)
tween_resource = SubResource("Resource_lxi1k")
tween_on_load = false
inactive_update_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone1" unique_id=661924388]
position = Vector2(9, 881)
shape = SubResource("RectangleShape2D_jjl5p")

[node name="Zone2" type="Area2D" parent="." unique_id=722403585]
visible = false
position = Vector2(2867, -1393)
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("14_lxi1k")
metadata/_custom_type_script = "uid://dukqn0hyev23g"

[node name="PhantomCamera2D" type="Node2D" parent="Zone2" unique_id=1958101486]
top_level = true
position = Vector2(256, -1280)
script = ExtResource("13_jjl5p")
follow_mode = 1
zoom = Vector2(0.2, 0.2)
tween_resource = SubResource("Resource_r5234")
tween_on_load = false
inactive_update_mode = 1
limit_target = NodePath("../../TileMapLayer")

[node name="AssignPlayer" type="Node" parent="Zone2/PhantomCamera2D" unique_id=1566406837]
script = ExtResource("15_jjl5p")
property_name = &"follow_target"
metadata/_custom_type_script = "uid://cobb1ipksi4ot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone2" unique_id=2039652822]
position = Vector2(-3635, -27)
shape = SubResource("RectangleShape2D_vil43")

[connection signal="direction_changed" from="Gateway/GatewayExit" to="Gateway" method="_on_marker_direction_changed"]
[connection signal="position_changed" from="Gateway/GatewayExit" to="Gateway" method="_on_marker_positon_changed"]
